# divi

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE  README.md  context7.json  pyproject.toml  pytest.ini  release-please-config.json  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build-and-deploy-sphinx.yml  changelog-check.yml  docs.yml  nightly.yml  publish-pypi.yml  release-please.yml  run_tutorials.ps1  run_tutorials.sh  style.yml  testing.yml  wheel-build.yml
LICENSES/: ORQViz-Apache-2.0-acknowledgement.txt
benchmarks/: benchmark_binary_qasm.py  compare_main_vs_best.py
divi/: __init__.py  _pbar.py  circuit.py  circuits.py  cunqa_service.py  exceptions.py  hamiltonians.py  interfaces.py  parallel_simulator.py  qasm.py  qem.py  qlogger.py  qoro_service.py  qpu_system.py  reporter.py  slurm_service.py  slurm_simulate.py  typing.py  utils.py  validate.py
divi/ai/: __init__.py  __main__.py  _chat.py  _cli.py  _eval.py  _indexer.py  _models.py  _retriever.py  _system.py  _tui.py  _types.py
divi/backends/: __init__.py  _async_job_backend.py  _backend_properties_conversion.py  _cancellation.py  _characterization.py  _circuit_runner.py  _config.py  _execution_config.py  _execution_result.py  _maestro_simulator.py  _numba_kernels.py  _parallel_simulator.py  _pauli_serde.py  _qiskit_simulator.py  _qoro_service.py  _qpu_system.py  _results_processing.py  _shot_allocation.py  _systems.py  _validation.py
divi/circuits/: __init__.py  _binary_qasm.py  _conversions.py  _core.py  _fidelity.py  _grouping.py  _pennylane_utils.py  _qasm_conversion.py  _qasm_template.py  _qasm_validation.py  _qem_passes.py  _types.py  qasm.py  qem.py  quepp.py  zne.py
divi/examples/: example.py
divi/hamiltonians/: __init__.py  _chem.py  _ising.py  _mixers.py  _polynomial.py  _term_ops.py  _trotterization.py  _types.py
divi/photonic/: README.md  __init__.py  _adam.py  _ir.py  _observables.py  _samplers.py  _tbi_born_machine.py  _tbi_qubo.py
divi/pipeline/: __init__.py  _compilation.py  _core.py  _dry_run.py  _grouping.py  _pipeline_set.py  _postprocessing.py  _preprocessor.py  _result_keys_operations.py  _shot_distribution.py  abc.py  transformations.py
divi/qprog/: __init__.py  _batch_coordinator.py  _graph_partitioning.py  _hamiltonians.py  _metrics.py  _mlae.py  _observable_measuring_mixin.py  _program_state.py  _qaoa.py  _qubo_partitioning.py  _qubo_partitoning.py  _solution_sampling_mixin.py  _types.py  _vqe.py  _vqe_sweep.py  aggregation.py  batch.py  checkpointing.py  early_stopping.py  ensemble.py  optimizers.py  qcc_ansatz.py  quantum_program.py  utils.py  variational_quantum_algorithm.py
divi/reporting/: __init__.py  _pbar.py  _qlogger.py  _reporter.py
divi/services/: __init__.py  qoro_service.py
divi/simulator/: parallel_simulator.py  simulator.py
divi/test/: conftest.py  test_circuit.py  test_qoro_service.py  test_vqe.py
divi/visualize/: vqe_dash.py
divi/viz/: __init__.py  _api.py  _gradients.py  _neb.py  _periodic.py  _results.py
docs/: Makefile  build_instructions.md  make.bat
docs/source/: conf.py  conftest.py  divi.qprog.rst  divi.qprog.vqe.rst  divi.rst  divi.services.rst  divi.simulator.rst  examples.rst  index.rst  intro.rst  modules.rst  qoro.rst  qoro.simulator.rst  quickstart.rst  spelling_wordlist.txt
examples/: circuit_cutting.py  h2_molecule_local.py  max_clique_qaoa_local.py  mlae_example.py  qaoa_graph_partitioning.py  qaoa_max_clique_local.py  qaoa_qubo.py  qasm_thru_service.py  vqe_h2_molecule_local.py  vqe_hyperparameter_sweep.py
examples/circuit_cutting/: circuit_cutting.py  circuit_generator.py
examples/portfolio_optimization/: modularity_spectral_partitioning.py  portfolio_optimization.ipynb
qoro/: circuit.py  example.py  qoro_service.py
qoro/qprog/: quantum_program.py
qoro/test/: test_circuit.py  test_qoro_service.py  test_vqe.py
test/: conftest.py  pytest.ini  test_circuit.py  test_qoro_service.py  test_vqe.py
test/qprog/: qprog_contracts.py  test_batch.py  test_qaoa.py  test_vqe.py  test_vqe_sweep.py
tests/: __init__.py  benchmarking.py  conftest.py  test_circuits.py  test_hamiltonians.py  test_qasm.py  test_qasm_validation.py  test_qem.py  test_qlogger.py  test_qoro_service.py  test_typing.py  test_utils.py
tests/ai/: conftest.py  test_chat.py  test_indexer_chunking.py  test_indexer_files.py  test_indexer_python.py  test_models.py  test_retriever.py  test_system.py  test_types.py
tests/backends/: _circuit_runner_contracts.py  _helpers.py  circuit_runner_contracts.py  conftest.py  test_backend_endianness.py  test_backend_properties_conversion.py  test_characterization.py  test_circuit_runner.py  test_config.py  test_execution_config.py  test_execution_result.py  test_maestro_config.py  test_maestro_simulator.py  test_parallel_simulator.py  test_pauli_serde.py  test_qiskit_simulator.py  test_qoro_service.py  test_results_processing.py  test_shot_allocation.py  test_validation.py
tests/circuits/: test_binary_qasm.py  test_circuits.py  test_cirq.py  test_conversions.py  test_grouping.py  test_pennylane_utils.py  test_qasm.py  (+6 more)
tutorials/: README.md  _backend.py  _ci_runner.py  backend_properties_conversion.py  ce_qaoa_cvrp.py  ce_qaoa_tsp.py  characterize_maxcut_qubo.py  checkpointing.py  circuit_cutting.py  custom_vqa.py  error_mitigation.py  iterative_qaoa.py  mlae_example.py  pce_qubo.py  qaoa_binary_quadratic_model.py  qaoa_graph_partitioning.py  qaoa_hubo.py  qaoa_max_clique.py  qaoa_max_clique_local.py  qaoa_max_weight_matching.py  qaoa_qdrift.py  qaoa_qdrift_local.py  qaoa_quadratic_program.py  qaoa_qubo.py  qaoa_qubo_partitioning.py  qasm_thru_service.py  standalone_pipeline.py  time_evolution.py  time_evolution_local.py  time_evolution_trajectory.py  validate_maxcut_qubo.py  viz_advanced_analysis.py  viz_qaoa_pce_comparison.py  vqe_h2_molecule.py  vqe_h2_molecule_local.py  vqe_h2_with_grouping.py  vqe_hyperparameter_sweep.py  zne.py  zne_local.py
visualizations/: mlae_dash.py  vqe_dash.py
(+275 files in other folders)
