[tool.poetry]
name = "divi"
version = "0.1.0"
description = ""
authors = ["Ahmed Darwish <ahmed@qoroquantum.de>", "Stephen DiAdamo <stephen@qoroquantum.de>"]
readme = "README.md"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pennylane = ">=0.40,<0.41"
networkx = "^3.5"
scipy = "<=1.15.2"
matplotlib = "^3.10.3"
requests = "^2.32.4"
qiskit = "<2.0"
qiskit-algorithms = "^0.3.1"
qiskit-aer = "^0.17.1"
qiskit-ibm-runtime = ">=0.37,<0.38"
qiskit-optimization = "^0.6.1"
dill = "^0.4.0"
sympy = "^1.14.0"
pyqt6 = "^6.9.1"
mitiq = {extras = ["qiskit"], version = "^0.45.1"}
cirq-core = "<1.5.0"
scikit-learn = "^1.7.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"


[tool.poetry.group.ui.dependencies]
dash = "^3.0.4"
dash-bootstrap-components = "^2.0.3"


[tool.poetry.group.testing.dependencies]
pytest = "^8.4.0"
pytest-mock = "^3.14.1"
flaky = "^3.8.1"


[tool.poetry.group.tutorials.dependencies]
dimod = "^0.12.20"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--no-success-flaky-report"
