[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "qoro-divi"
version = "0.12.0"
description = "A Python library to automate generating, parallelizing, and executing quantum programs."
authors = [{ name = "Ahmed Darwish", email = "ahmed@qoroquantum.de" }, { name = "Stephen DiAdamo", email = "stephen@qoroquantum.de" }]
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "Apache-2.0"
keywords = ["quantum", "quantum-computing", "qiskit", "simulation", "optimization", "qaoa", "vqe"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # Quantum computing
    "pennylane>=0.44,<0.45",
    "pennylane-qiskit>=0.44,<0.45",
    "qiskit>=2.3,<2.4",
    "qiskit-aer",
    "qiskit-ibm-runtime>=0.45,<0.46",
    # Scientific computing and numerical operations
    "numpy",
    "scipy>=1.16,<2.0",
    "sympy>=1.14,<2.0",
    "scikit-learn>=1.7,<2.0",
    # Graph operations and partitioning
    "networkx>=3.5,<4.0",
    "pymetis>=2025.1.1,<2026.0.0; sys_platform != 'win32'",
    "qoro-maestro==0.2.11",
    # Optimization algorithms
    "pymoo>=0.6,<0.7",
    "dwave-hybrid>=0.6.14,<0.7.0",
    # Utilities
    "requests>=2.32,<3.0",
    "dill>=0.4,<0.5",
    "python-dotenv>=1.1.1,<2.0",
    "rich>=14.0,<15.0",
    "matplotlib>=3.10,<4.0",
    "ply>=3.11,<4.0",
    "basis-set-exchange>=0.11,<0.12",
    "pydantic>=2.10,<3.0",
    "numba>=0.64.0,<0.65.0",
    "stim>=1.15.0,<2.0",
]

[project.urls]
Homepage = "https://qoroquantum.net"
Documentation = "https://divi.readthedocs.io"
Repository = "https://github.com/QoroQuantum/divi"
"Issue Tracker" = "https://github.com/QoroQuantum/divi/issues"
Changelog = "https://github.com/QoroQuantum/divi/blob/main/CHANGELOG.md"

[project.scripts]
divi-ai = "divi.ai._cli:main"

[project.optional-dependencies]
jupyter = [
    "ipywidgets>=8.1.7,<9.0.0",
    "ipykernel>=7.1.0,<8.0.0",
]
ai = [
    "llama-cpp-python>=0.3.16,<0.4.0",
    "fastembed>=0.8.0,<0.9.0",
    "faiss-cpu>=1.13.2,<2.0.0",
    "textual>=8.1.1,<9.0.0",
    "pyperclip>=1.11.0,<2.0.0",
    "psutil>=7.0,<8.0",
    "platformdirs>=4.0,<5.0",
    "huggingface-hub>=1.0",
    "docutils>=0.18",
]


[dependency-groups]
dev = [
    "black>=26.3,<27.0",
    "isort>=8.0,<9.0",
    "pre-commit>=4.5,<5.0",
    "commitizen>=4.13,<5.0",
    "pyrefly>=0.62.0",
    "types-networkx>=3.6",
    "types-requests>=2.33",
    "types-docutils>=0.22",
    "types-psutil>=7.2",
    "types-pyperclip>=1.11",
]
testing = [
    "pytest>=8.4,<9.0",
    "pytest-mock>=3.14,<4.0",
    "pytest-xdist>=3.8,<4.0",
    "pytest-cov>=7.0,<8.0",
    "sybil>=9.0",
]
docs = [
    "sphinx>=9.0.0",
    "furo>=2024.8",
    "sphinx-autodoc-typehints>=3.0,<4.0",
    "sphinx-autobuild>=2025.8.25,<2026.0.0",
    "sphinxcontrib-mermaid>=2.0,<3.0",
    "sphinxcontrib-spelling>=8.0.1,<9.0.0",
    "sphinx-automodapi>=0.18",
    "sphinx-copybutton>=0.5.2",
]


[tool.uv]
default-groups = ["dev", "testing", "docs"]

[tool.hatch.build.targets.wheel]
packages = ["divi"]
artifacts = ["divi/ai/_data/*"]

[tool.hatch.build.targets.sdist]
artifacts = ["divi/ai/_data/*"]

[tool.isort]
profile = "black"
skip_glob = ["**/__init__.py"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver2"
version_provider = "pep621"
major_version_zero = true

[tool.pyrefly]
project-includes = [
    "divi/**/*.py",
]
project-excludes = [
    "divi/ai/**/*.py",
]
